# SeizureSense

./: .gitignore  README.md
firmware/main/: gap.c  gap.h  gsr_detection.h  hrv_detection.h  idf_component.yml  seizure_filter.c  seizure_filter.h  seizure_model_new.cc
template-app/: README.md  generate_dataflow_diagram.py  generate_flowchart.py  generate_ppt_flowchart.py  generate_presentation.py  generate_report_graphs.py  model.tflite  seizure_model_int8.tflite
template-app/main/: CMakeLists.txt  common.h  detection_responder.cc  detection_responder.h  gsr_detection.c  hrv_detection.c  main.c  main_functions_new.cc  model_settings.cc  model_settings.h  seizure_model.tflite
